{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "243440c9-0b9a-488c-8c14-62c1098b8120",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "04c1e177-d0f5-4b58-b992-bafde412d527",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseFlip",
                    "type": "Value",
                    "id": "1350c63a-ebbe-4fcc-bd11-59569149652b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Atack",
                    "type": "Button",
                    "id": "660c55a1-e982-4671-8840-e479b68e6731",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "5f633830-5d55-4d74-99b9-480096ed3101",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2eb18282-e6e0-414a-96f9-e74cc9c934aa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a2371e89-4e0e-4cc0-bdd2-1ee815356d29",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "213a280b-8ce9-494b-bfb6-5081e410c630",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e9a21091-8555-443c-b474-7900a8b3a288",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "712cb306-9e72-4fc5-999b-10513a7b5b31",
                    "path": "<Mouse>/position/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseFlip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "741ea47e-555e-4c2d-ae47-420b17d728c5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Atack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "624510ba-a527-41d7-9d9f-f5025a89b8e9",
            "actions": [
                {
                    "name": "EnterPauseMenu",
                    "type": "Button",
                    "id": "6a125089-07a5-4b79-b435-70631c42a38a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52bb2278-bab0-4d6d-af07-afec080618b1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterPauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}